# CUDA_fast_forward_NN

./: CMakeLists.txt  README.md
data/: weights.txt
src/: kernel_mat_op.cu  kernel_mat_op.hh  mat_op.cc  network.cc  read_from_cam.cc
src/layers/: Activation.cc  Activation.hh  AveragePooling2D.cc  AveragePooling2D.hh  Conv2D.cc  Conv2D.hh  Dense.cc  Dense.hh  Flatten.cc  Flatten.hh  Layer.cc  Layer.hh  Model.cc  Model.hh
src/matrices_operations/: apply_fct.cc  apply_fct.hh  apply_softmax.cc  apply_softmax.hh  mat_op.cc  mat_op.hh  matrice_add.cu  matrice_add.hh  matrice_mult.cu  matrice_mult.hh  matrix_add.cu  matrix_add.hh  matrix_add_scalar.cc  matrix_add_scalar.cu  matrix_add_scalar.hh  matrix_avg_pooling.cu  matrix_avg_pooling.hh  matrix_conv.cc  matrix_conv.cu  matrix_conv.hh  matrix_mult.cu  matrix_mult.hh
src/matrices_operations/kernels/: kernel_mat_op.cu  kernel_mat_op.hh
src/model_loading/: load_weights.cc  load_weights.hh
